@@ -1,0 +1,1 @@
+Make 'repeat' and 'random' un-toggleable in config. People have to specify new state.
